--- a/index.html
+++ b/index.html
@@ -43,23 +43,45 @@
             padding: 0 20px;
         }
 
-        /* icon styling */
-        .app-icon {
-            position: absolute;
-            left: 10%;
-            width: 120px;              /* scales with screen width */
-            height: auto;            /* keeps aspect ratio */
-            border-radius: 20px;
-            border: 3px solid white;
-            z-index: 10;
+        /* Top Navigation Bar */
+        .top-nav {
+            background: white;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            padding: 12px 0;
         }
 
+        .top-nav .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .nav-logo {
+            height: 50px;
+            width: auto;
+            border-radius: 10px;
+            border: 2px solid var(--border);
+        }
+
+        .nav-app-store {
+            height: 40px;
+            width: auto;
+            transition: opacity 0.3s;
+            cursor: pointer;
+        }
+
+        .nav-app-store:hover {
+            opacity: 0.8;
+        }
 
         /* Header */
         header {
             background: var(--indigo);
             color: white;
-            padding: 60px 0;
+            padding: 80px 20px;
             text-align: center;
         }
 
@@ -336,25 +358,29 @@
 
         /* Mobile Optimization for iPhone */
         @media (max-width: 600px) {
-            /* Hide the app icon */
-            .app-icon {
-                display: none;
+            /* Top nav adjustments */
+            .nav-logo {
+                height: 50px;
+            }
+
+            .nav-app-store {
+                height: 40px;
             }
 
             /* Simplify the header */
             header {
-                padding: 30px 10px; /* smaller padding */
+                padding: 50px 15px;
             }
 
             header h1 {
-                font-size: 1.8rem;
+                font-size: 2rem;
             }
 
             header p {
-                font-size: 1rem;
+                font-size: 1.1rem;
             }
 
-            /* Hide or minimize the top bar */
+            /* Hide or minimize the menu nav */
             nav {
                 display: none;
             }
@@ -382,10 +408,17 @@
     </style>
 </head>
 <body>
+    <!-- Top Navigation -->
+    <div class="top-nav">
+        <div class="container">
+            <img src="./img/icon.png" alt="GradIn Logo" class="nav-logo">
+            <img src="./img/apple.svg" alt="Download on the App Store" class="nav-app-store">
+        </div>
+    </div>
+
     <!-- Header -->
     <header>
         <div class="container">
-            <img src="./img/icon.png" alt="GradIn App Icon" class="app-icon">
             <h1>GradIn <span style="font-size:1rem;">[ɡʁa.dɛ̃]</span></h1>
             <p>Outcome-based assessment made simple, respectful, and human.</p>
         </div>
