--- a/index.html
+++ b/index.html
@@ -5,413 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="GradIn - Professional outcome-based GradIng for teachers. Track student progress with standards-based assessment.">
     <title>GradIn - Outcome-based assessment made simple, respectful, and human.</title>
-    <style>
-        :root {
-            --indigo: #5856D6;
-            --indigo-dark: #4341C7;
-            --indigo-light: #7674E8;
-            --background: #FFFFFF;
-            --text-primary: #000000;
-            --text-secondary: #6B6B6B;
-            --border: #E5E5E5;
-            --green: #34C759;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html, body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            overflow-x: hidden; /* empêche tout décalage horizontal */
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-            line-height: 1.6;
-            color: var(--text-primary);
-            background: var(--background);
-        }
-
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        /* Top Navigation Bar */
-        .top-nav {
-            background: white;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.08);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            padding: 12px 0;
-        }
-
-        .top-nav .container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .nav-logo {
-            height: 50px;
-            width: auto;
-            border-radius: 10px;
-            border: 2px solid var(--border);
-        }
-
-        .nav-app-store {
-            height: 40px;
-            width: auto;
-            transition: opacity 0.3s;
-            cursor: pointer;
-        }
-
-        .nav-app-store:hover {
-            opacity: 0.8;
-        }
-
-        /* Header */
-        header {
-            background: var(--indigo);
-            color: white;
-            padding: 80px 20px;
-            text-align: center;
-        }
-
-        header h1 {
-            font-size: 3.5rem;
-            font-weight: 700;
-            margin-bottom: 20px;
-        }
-
-        header p {
-            font-size: 1.3rem;
-            opacity: 0.95;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        /* Navigation */
-        nav {
-            background: white;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            justify-content: center;
-            padding: 20px 0;
-            flex-wrap: wrap;
-        }
-
-        nav a {
-            color: var(--text-primary);
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-            border-radius: 8px;
-            transition: all 0.3s;
-            font-weight: 500;
-        }
-
-        nav a:hover {
-            background: var(--indigo);
-            color: white;
-        }
-
-        /* Sections */
-        section {
-            padding: 60px 0;
-        }
-
-        section h2 {
-            font-size: 2.5rem;
-            color: var(--text-primary);
-            margin-bottom: 30px;
-            text-align: center;
-        }
-
-        section h3 {
-            font-size: 1.8rem;
-            color: var(--text-primary);
-            margin-top: 30px;
-            margin-bottom: 15px;
-        }
-
-        section p, section li {
-            font-size: 1.1rem;
-            color: var(--text-secondary);
-            margin-bottom: 15px;
-        }
-
-        .menu-link{
-            display: inline-flex;
-            align-items: center;
-            gap: 0.3em; /* controls spacing between icon and text */
-            text-decoration: none;
-            color: inherit;
-        }
-
-        /* Features Grid */
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 40px;
-        }
-
-        .feature-card {
-            background: white;
-            border: 2px solid var(--border);
-            border-radius: 12px;
-            padding: 30px;
-            transition: all 0.3s;
-        }
-
-        .feature-card:hover {
-            border-color: var(--indigo);
-        }
-
-        .feature-card h3 {
-            color: var(--indigo);
-            margin-top: 0;
-            font-size: 1.5rem;
-        }
-
-        /* Image Placeholder */
-        .image-placeholder {
-            background: linear-gradient(135deg, var(--indigo-light) 0%, var(--indigo) 100%);
-            border-radius: 12px;
-            padding: 100px 20px;
-            text-align: center;
-            color: white;
-            font-size: 1.2rem;
-            margin: 30px 0;
-            border: 3px dashed rgba(255,255,255,0.5);
-        }
-
-        .screenshots {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin: 40px 0;
-        }
-
-        /* How To Steps */
-        .step {
-            background: #F9F9F9;
-            border-left: 4px solid var(--indigo);
-            padding: 20px 30px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-        }
-
-        .step-number {
-            display: inline-block;
-            background: var(--indigo);
-            color: white;
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            text-align: center;
-            line-height: 30px;
-            font-weight: bold;
-            margin-right: 10px;
-        }
-
-        /* FAQ */
-        .faq-item {
-            border-bottom: 1px solid var(--border);
-            padding: 20px 0;
-        }
-
-        .faq-item:last-child {
-            border-bottom: none;
-        }
-
-        .faq-question {
-            font-size: 1.3rem;
-            font-weight: 600;
-            color: var(--indigo);
-            margin-bottom: 10px;
-        }
-
-        .faq-answer {
-            font-size: 1.1rem;
-            color: var(--text-secondary);
-            padding-left: 20px;
-        }
-
-        /* Contact */
-        .contact-box {
-            background: var(--indigo);
-            color: white;
-            padding: 40px;
-            border-radius: 12px;
-            text-align: center;
-            margin-top: 30px;
-        }
-
-        .contact-box h3 {
-            color: white;
-            margin-top: 0;
-        }
-
-        .contact-box a {
-            color: white;
-            font-size: 1.3rem;
-            text-decoration: none;
-        }
-
-        .contact-box p{
-            color: white;
-        }
-
-        .contact-box a:hover {
-            opacity: 0.8;
-        }
-
-        .github-icon {
-            height: 1em;
-            vertical-align: middle;
-            fill: currentColor;
-        }
-
-
-        /* Footer */
-        footer {
-            background: #F9F9F9;
-            text-align: center;
-            padding: 30px 0;
-            color: var(--text-secondary);
-            margin-top: 60px;
-        }
-
-        .app-store-badge {
-            display: inline-block;
-            margin: 20px 0;
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2rem;
-            }
-
-            header p {
-                font-size: 1.1rem;
-            }
-
-            section h2 {
-                font-size: 2rem;
-            }
-
-            nav a {
-                padding: 8px 15px;
-                margin: 5px;
-                font-size: 0.9rem;
-            }
-        }
-
-        /* Accent elements */
-        .highlight {
-            color: var(--indigo);
-            font-weight: 600;
-        }
-
-        ul {
-            list-style: none;
-            padding-left: 0;
-        }
-
-        a{
-            text-decoration: none;
-        }
-
-        .brittany-flag {
-            text-align: center;
-            margin-top: 40px;
-        }
-
-        .brittany-flag img {
-            height: 150px;
-            vertical-align: middle;
-            margin-right: 5px;
-            filter: grayscale(100%);
-            transition: filter 0.4s ease;
-        }
-
-        .brittany-flag img:hover {
-            filter: grayscale(0%);
-        }
-
-        /* Mobile Optimization for iPhone */
-        @media (max-width: 600px) {
-            /* Top nav adjustments */
-            .nav-logo {
-                height: 50px;
-            }
-
-            .nav-app-store {
-                height: 40px;
-            }
-
-            /* Simplify the header */
-            header {
-                padding: 50px 15px;
-            }
-
-            header h1 {
-                font-size: 2rem;
-            }
-
-            header p {
-                font-size: 1.1rem;
-            }
-
-            /* Hide or minimize the menu nav */
-            nav {
-                display: none;
-            }
-
-            /* Add top spacing so sections aren't glued to top */
-            section:first-of-type {
-                padding-top: 40px;
-            }
-
-            /* Reduce padding for smaller screens */
-            section {
-                padding: 40px 0;
-            }
-
-            /* Smaller text overall for compact view */
-            section h2 {
-                font-size: 1.6rem;
-            }
-
-            section p {
-                font-size: 1rem;
-            }
-        }
-
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <!-- Top Navigation -->
     <div class="top-nav">
         <div class="container">
-            <img src="./img/icon.png" alt="GradIn Logo" class="nav-logo">
+            <a href="index.html"><img src="./img/icon.png" alt="GradIn Logo" class="nav-logo"></a>
             <img src="./img/apple.svg" alt="Download on the App Store" class="nav-app-store">
         </div>
     </div>
@@ -456,12 +57,9 @@ GradIn gives teachers a new way to assess learning — through outcomes, criteri
 Move beyond grades. Measure growth. Keep the conversation at the heart of learning.
             </p>
 
-            <!-- App Screenshots Placeholder -->
-            <div class="screenshots">
-                <img src="img/ipad1.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
-                <img src="img/ipad2.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
-                <img src="img/ipad6.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
-            </div>
+<section class="video-demo" style="text-align: center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MDPRJ0A-XqU?si=XF_qwsOA38G6wC1m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</section>
 
             <h3 style="text-align: center"> The story behind the name </h3>
             <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
@@ -479,6 +77,12 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
     <section id="features" style="background: #F9F9F9;">
         <div class="container">
             <h2>Key Features</h2>
+
+            <div class="screenshots">
+                <img src="img/ipad1.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
+                <img src="img/ipad6.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
+            </div>
+
 
             <div class="features">
 
@@ -568,10 +172,9 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
                 <p>Show QR code to students so they can instantly receive their personalized progress report by email — no accounts or cloud needed.</p>
             </div>
 
-            <!-- Feature Image Placeholder -->
+            <!-- Feature Images -->
             <div class="screenshots">
                 <img src="img/iphone1.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
-                <img src="img/iphone2.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
                 <img src="img/iphone5.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
             </div>
 
