--- a/privacy.html
+++ b/privacy.html
@@ -5,127 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Gradin Privacy Policy - Learn how we protect your data">
     <title>Privacy Policy - Gradin</title>
-    <style>
-        :root {
-            --indigo: #5856D6;
-            --indigo-dark: #4341C7;
-            --background: #FFFFFF;
-            --text-primary: #000000;
-            --text-secondary: #6B6B6B;
-            --border: #E5E5E5;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html, body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            overflow-x: hidden; /* empêche tout décalage horizontal */
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-            line-height: 1.8;
-            color: var(--text-primary);
-            background: var(--background);
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 40px 20px;
-        }
-
-        header {
-            background: var(--indigo);
-            color: white;
-            padding: 40px 0;
-            text-align: center;
-        }
-
-        header h1 {
-            font-size: 2.5rem;
-            font-weight: 700;
-        }
-
-        .back-link {
-            display: inline-block;
-            color: var(--indigo);
-            text-decoration: none;
-            margin-bottom: 30px;
-            font-weight: 500;
-        }
-
-        .back-link:hover {
-            text-decoration: underline;
-        }
-
-        h2 {
-            color: var(--indigo);
-            font-size: 1.8rem;
-            margin-top: 40px;
-            margin-bottom: 15px;
-        }
-
-        h3 {
-            color: var(--text-primary);
-            font-size: 1.3rem;
-            margin-top: 25px;
-            margin-bottom: 10px;
-        }
-
-        p, li {
-            font-size: 1.05rem;
-            color: var(--text-secondary);
-            margin-bottom: 15px;
-        }
-
-        ul {
-            padding-left: 30px;
-            margin-bottom: 20px;
-        }
-
-        .highlight-box {
-            background: #F0F0FF;
-            border-left: 4px solid var(--indigo);
-            padding: 20px;
-            margin: 30px 0;
-            border-radius: 8px;
-        }
-
-        .highlight-box strong {
-            color: var(--indigo);
-        }
-
-        .last-updated {
-            color: var(--text-secondary);
-            font-style: italic;
-            margin-bottom: 30px;
-        }
-
-        footer {
-            background: #F9F9F9;
-            text-align: center;
-            padding: 30px 0;
-            margin-top: 60px;
-        }
-
-        footer a {
-            color: var(--indigo);
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/privacy.css">
 </head>
 <body>
+    <!-- Top Navigation -->
+    <div class="top-nav">
+        <div class="container">
+            <a href="index.html"><img src="./img/icon.png" alt="GradIn Logo" class="nav-logo"></a>
+            <img src="./img/apple.svg" alt="Download on the App Store" class="nav-app-store">
+        </div>
+    </div>
+
     <header>
         <div class="container">
             <h1>Privacy Policy</h1>
