--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
     <div class="top-nav">
         <div class="container">
             <a href="index.html"><img src="./img/icon.png" alt="GradIn Logo" class="nav-logo"></a>
-            <img src="./img/apple.svg" alt="Download on the App Store" class="nav-app-store">
+                  <a href="https://apps.apple.com/fr/app/gradin/id6754825654"><img src="./img/apple.svg" alt="Download on the App Store" class="nav-app-store" /></a>
         </div>
     </div>
 
