--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
                 <!-- App Store Badge Placeholder -->
                 <img src="img/icon.png" style="width: 120px; border-radius: 20px; border: 3px solid white;">
 
-            <p>&copy; 2025 GradIn. All rights reserved. GradIn is an independent project developed by Vincent Choqueuse on personal time, using privately owned equipment and a self-funded Apple Developer account. No institutional resources were used.</p>
+            <p>&copy; 2025 GradIn. All rights reserved.</p>
+            <p>GradIn is an independent project developed by Vincent Choqueuse on personal time, using privately owned equipment and a self-funded Apple Developer account. No institutional resources were used.</p>
             <p style="margin-top: 10px;">
                 <a href="docs.html" style="color: var(--indigo); text-decoration: none;">Documentation</a> |
                 <a href="privacy.html" style="color: var(--indigo); text-decoration: none;">Privacy Policy</a> |
